[package]
name = "tonic-web-wasm-client"
version = "0.7.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "grpc-web implementation for use by tonic clients in browsers via webassembly"
homepage = "https://github.com/devashishdxt/tonic-web-wasm-client"
repository = "https://github.com/devashishdxt/tonic-web-wasm-client"
readme = "README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "grpc-web", "tonic", "wasm"]
edition = "2021"

[dependencies]
base64 = "0.22"
byteorder = "1"
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
httparse = "1"
pin-project = "1"
thiserror = "2"
tonic = { version = "0.13", default-features = false }
tower-service = "0.3"

# Browser-specific dependencies
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-streams = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "Headers",
    "ReadableStream",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ServiceWorkerGlobalScope",
], optional = true }

# Component Model-specific dependencies
wstd = { version = "0.5", optional = true }

[features]
default = ["browser"]

# This feature enables dependencies required for running in a web browser
# environment, utilizing Web APIs and JavaScript interop.
browser = [
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-streams",
    "dep:web-sys",
]

# This feature is intended for builds targeting the WebAssembly Component Model.
wasip2 = ["dep:wstd"]
